<resources>
    <string name="app_name">UT3Hulenko</string>
    <string name="hello">Hello</string>
    <string name="john_dou">John Dou</string>
    <string name="search_elements">Search elements</string>
    <string name="games">Games</string>
    <string name="contacts">Contacts</string>
    <string name="health">Health</string>
    <string name="maps">Maps</string>
    <string name="trending">TRENDING</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="accounte">Accounte</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="send">SEND</string>
    <string name="opcion1">Opcion1</string>
    <string name="opcion2">Opcion2</string>
    <string name="opcion3">Opcion3</string>
    <string name="randomImage" />
    <string name="felicitaciones">Felicitaciones</string>
    <string name="restart">RESTART</string>
    <string name="exit">EXIT</string>
    <string name="next">NEXT</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
</resources>