<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamesActivity">

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/random_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/randomImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic[3]" />


    <TextView
        android:id="@+id/idPreguntas"
        android:layout_width="19dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:text="1"
        android:textColor="#1F6BBB"
        app:layout_constraintBottom_toTopOf="@+id/elPregunto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/elPregunto"
        android:layout_width="373dp"
        android:layout_height="101dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/round_background_yellow"
        android:gravity="center"
        android:minHeight="100dp"
        android:padding="20dp"
        android:text="La pregunta va a estar aqui"
        android:textColor="#CC000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="116dp"
        android:layout_height="127dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSend"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="138dp">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:layout_marginBottom="12dp"
            android:text="@string/opcion1"
            app:layout_constraintBottom_toTopOf="@+id/radioButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:layout_marginBottom="12dp"
            android:text="@string/opcion2"
            app:layout_constraintBottom_toTopOf="@+id/radioButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:layout_marginBottom="4dp"
            android:text="@string/opcion3"
            app:layout_constraintBottom_toTopOf="@+id/buttonSend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>